Nsa /Finalhour polished

--- a/nostringsattached.html
+++ b/nostringsattached.html
@@ -116,7 +116,7 @@
                     <ul>
                         <li>The player had strings attached to their head and both arms.</li>
                         <li>The player’s head string would only become reachable after both arm strings were gone.</li>
-                        <li> If a player lost their head string, they would die.</li>
+                
                         <li> The player had two stances, high and low.</li>
                         <li> If a player lost their head string, they would die.</li>
                         <li> The player could punch and block with either arm, in both stances.</li>
@@ -311,7 +311,7 @@
                     <a href="https://sketchfab.com/rach.mwa">Rachel Missingham</a>, Lead Artist<br>
                     <a href="https://e_salv.artstation.com">Elijah Salvana</a>, Technical Artist<br>
                     <a href="https://www.artstation.com/deakenperera">Deaken Perera</a>, UI Artist<br>
-                    <a href="">Gianluca La Verde</a>, Artist<br>
+                    <a href="https://www.artstation.com/imgeku">Gianluca La Verde</a>, Artist<br>
                     <a href="">Alisha Frendo</a>, Artist<br><br>
 
 
