Final hour polish

--- a/finalhour.html
+++ b/finalhour.html
@@ -114,7 +114,7 @@
                     <img src="images/FinalHour/S1.jpg" alt="1" data-position="center center" style="width:1057px;height:815px;"><br>
                     <br>When I started building the level in Unity, I quickly realized that curved walls were difficult to work with using Unity’s primitives. Awkward geometry and alignment issues made the design non-viable, so I touched it up and made a digital draft in Photopea, covering the curved walls with straight ones in front of them. This was my first challenge in understanding how 2D designs translate into 3D space and a simple solution to unforeseen issue.<br><br>
 
-                    This is the first rough digital draft created for the level design
+                    This was the first rough digital draft created for the level design:
                     <img src="images/FinalHour/D1.png" alt="Draft" data-position="center center" style="width:951px;height:864px;">
 
                     <br>After more communication with the narrative designer, they were happy with the design so I re-made it in higher quality, and got feedback from the rest of the team.<br>
@@ -122,8 +122,8 @@
 
 
                     <br>After even more reviews from the narrative designer and team, I refined the digital draft and started blocking out the playable areas in engine.<br>
-                    <img src="images/FinalHour/FD1.png" alt="Draft" data-position="center center" style="width: 1080px; height: 1080px;">
-                    <img src="images/FinalHour/FD2.png" alt="Draft" data-position="center center" style="width: 1080px; height: 1080px; ">
+                    <img src="images/FinalHour/FD1.png" alt="Draft" data-position="center center" style="width: 720px; height: 720px;">
+                    <img src="images/FinalHour/FD2.png" alt="Draft" data-position="center center" style="width: 720px; height: 720px; ">
                     <br>I left it up to the narrative designer to place the items for each fetch quest and position for each NPC. <br>
 
                     <br>To save time and create a more lived-in feel, I used barricades and furniture to block off non-playable areas, making the ship feel bigger without overextending the level. I made the grey box by putting the level design above into engine on a large cube and building the area on top of it. This design was slightly altered after some more feedback from the team. I got back into the engine and made the final version with primitives, it looked like this: <br>
