--- a/finalhour.html
+++ b/finalhour.html
@@ -223,7 +223,7 @@
                     Brodie Frazier (Me), Level and Sound Designer<br>
                     <a href="https://tomnce.dev">Tom Evangelou</a>, Programmer<br>
                     <a href="https://sites.google.com/view/blakeandrewsportfolio">Blake Andrews</a>, Narrative Designer<br>
-                    <a href="https://phoenix_marsh.artstation.com"> Pheonix Marsh</a>, Character Modeller, Technical Artist<br>
+                    <a href="https://phoenix_marsh.artstation.com"> Pheonix Marsh</a>, Character Modeller and Technical Artist<br>
                     <a href="https://skeleben.itch.io"> Ben Hunter</a>, 2D Character and UI Designer<br>
                     <a href="https://www.artstation.com/kaine_gejjo">Kaine Gejjo</a>, Environmental Artist<br>
                     <a href="https://www.instagram.com/jjohnsharpp/?hl=en">John Sharp</a>, Music<br><br>
