Mind's Isle finished, NSA credits updated

--- a/nostringsattached.html
+++ b/nostringsattached.html
@@ -312,7 +312,7 @@
                     <a href="https://e_salv.artstation.com">Elijah Salvana</a>, Technical Artist<br>
                     <a href="https://www.artstation.com/deakenperera">Deaken Perera</a>, UI Artist<br>
                     <a href="https://www.artstation.com/imgeku">Gianluca La Verde</a>, Artist<br>
-                    <a href="">Alisha Frendo</a>, Artist<br><br>
+                    <a href="https://www.artstation.com/mishkaa">Alisha Frendo</a>, Artist<br><br>
 
 
                     Thanks for reading! If you want to download the game or see more of the game check out the itch page below :)
