--- a/syncandecco.html
+++ b/syncandecco.html
@@ -75,7 +75,7 @@
 
                     <h3>Credits:</h3>
                     Brodie Frazier (Me), Lead Designer and Producer  <br />
-                    <a href="https://kian-kelly.itch.io">Kian Kelly</a>, Gameplay and Level Designer<br>
+                    <a href="https://www.kiankelly.com">Kian Kelly</a>, Gameplay and Level Designer<br>
                     <a href="https://slime-enjoyer.itch.io">Austin Lanyon</a>, QA & Bugtesting<br>
                     <a href="https://locstock.dev"> Lochlan McDonald</a>, Programmer<br>
                     <a href="https://tombeeeeeeeeeee.github.io"> Thomas O'Brien</a>, Programmer<br>
