--- a/syncandecco.html
+++ b/syncandecco.html
@@ -80,7 +80,7 @@
                     <a href="https://locstock.dev"> Lochlan McDonald</a>, Programmer<br>
                     <a href="https://tombeeeeeeeeeee.github.io"> Thomas O'Brien</a>, Programmer<br>
                     <a href="https://sketchfab.com/rach.mwa">Rachel Missingham</a>, Artist<br>
-                    <a href="">Hachi Dinh</a>, Artist<br>
+                    <a href="https://hajicha.artstation.com/">Hachi Dinh</a>, Artist<br>
                     <a href="https://www.artstation.com/laurenct">Lauren Trinh</a>, Artist<br>
                   
 
