Sync and Ecco, Added docs

--- a/syncandecco.html
+++ b/syncandecco.html
@@ -71,6 +71,21 @@
                     <br>
                     In this couch co-op experience, work together to overcome enemies and avoid hazards. However you can’t face this task alone, it’s truly a duality of survival.
 
+
+                    <br>
+
+                    <br>
+                    Find all the relevant documentation for the project below!<br>
+
+                    <ul class="actions">
+                        <li><a href="images/SyncandEcco/Brief.pdf" class="button">Open Brief here!</a> <a href="images/SyncandEcco/Pitch.pdf" class="button">Open Pitch here!</a></li>
+                    </ul>
+
+                    <ul class="actions">
+                        <li><a href="images/SyncandEcco/GDD.pdf" class="button">Open GDD here!</a> <a href="images/SyncandEcco/ArtBible.pdf" class="button">Open Art Bible here!</a><a href="images/SyncandEcco/TDD.pdf" class="button">Open TDD here!</a></li>
+                    </ul>
+
+
                     <br>
 
                     <h3>Credits:</h3>
@@ -82,7 +97,7 @@
                     <a href="https://sketchfab.com/rach.mwa">Rachel Missingham</a>, Artist<br>
                     <a href="https://hajicha.artstation.com/">Hachi Dinh</a>, Artist<br>
                     <a href="https://www.artstation.com/laurenct">Lauren Trinh</a>, Artist<br>
-                  
+
 
 
                     Thanks for reading! If you want to download the game or see more of the game check out the itch page below :)
