Added All sync and ecco gifs

--- a/mindsisle.html
+++ b/mindsisle.html
@@ -144,7 +144,7 @@
                     This system I followed and created was flexible and allowed easy integration for future use. I took it a step further by using them for my crafting system, storage system, gathering system and furnace system! Scriptable objects were one of the most useful things I've ever discovered in c# and this game would be in shambles without them.
                     <br /><br />
                     Here's a quick gif showing the functionality:<br />
-                    <img src="images/MindsIsle/inv.gif" alt="Draft" data-position="center center" style="width:1280px;height:720px;"><br />
+                    <img src="images/MindsIsle/Inv.gif" alt="Inventory GIF" data-position="center center" style="width:1280px;height:720px;"><br />
                     <br /><br />   <h3> Post-Processing </h3>
                     Something really important to me was creating different atmospheres for different areas of the map. This was my first major 3D Unity game as a solo developer. I had never majorly touched lighting or this thing called “Post-processing.” I spent a good few hours playing around with post-processing profiles and was blown away by the results. I created different profiles to help show the player underwater, in a cave, in the daytime and nighttime. Looking back on it, I'm not sure how I would've created these environments without it.
 
