Fixed Banner Sizing

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 		<!-- Intro -->
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
-				<a href="https://brazafraza.dev" class="image" target="_blank">
-					<img src="images/Placeholderbanner.png" alt="Banner Image" data-position="center center" style="width:1240px;height:488px;">
+				<a href="https://brazafraza.dev" class="image responsive-banner" target="_blank">
+					<img src="images/Placeholderbanner.png" alt="Banner Image" style="max-width: 100%;">
 				</a>
 				<h1>
 					
