Added sectioning, made contact section more obvious, more contacts

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
 	<!-- Sidebar -->
 	<section id="sidebar">
 		<div class="inner">
+
 			<nav>
+
 				<ul>
+
 					<li><a href="#intro">Who I am</a></li>
 					<li><a href="#one">Projects</a></li>
 					<li><a href="#three">Get in touch</a></li>
@@ -49,13 +52,20 @@
 					<img src="images/Placeholderbanner.png" alt="Banner Image" style="max-width: 100%;">
 				</a>
 				<h1>
-					
+
 					<div class="hover-image" style="float: right;">
 						<img src="/images/brazafraza.png" alt="Favicon" id="mainImage">
 					</div>
 				</h1>
+				
 				<p>Hey there! My name is Brodie Frazier, I'm an indie game developer. <br> <br> I'm currently studying game design and production at at AIE in Melbourne, focusing on building my portfolio and expanding my skill set. I have a versatile background with having done work on design, sound, programming and a little bit of art.<br /> I'm working on some exciting projects! Check them out below where I share the development journey for each game and you can find the download links.</p>
-
+				<ul class="icons">
+					<li><a href="https://www.linkedin.com/in/brodie-frazier-a5a384294/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/brazafraza" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://brodie-frazier.itch.io" class="icon brands fa-itch-io"><span class="label">Itch.io</span></a></li>
+					<li><a href="https://www.youtube.com/@brazafraza" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+					<li><a href="mailto:brodiefrazier@gmail.com" class="fa fa-envelope" aria-hidden="true"><span class="label">Mail</span></a></li>
+				</ul>
 			</div>
 		</section>
 
@@ -161,7 +171,7 @@
 		<section id="three" class="wrapper style1 fade-up">
 			<div class="inner">
 				<h2>Contact me</h2>
-				<p>If you'd like to connect, feel free to reach out to my email! You can also find me on my social media links below.</p>
+				<p>If you'd like to connect, feel free to reach out to my email or my social media links below.</p>
 				<section>
 					<ul class="contact">
 						<li><a href="mailto:brodiefrazier@gmail.com">brodiefrazier@gmail.com</a></li>
@@ -171,6 +181,8 @@
 								<li><a href="https://www.linkedin.com/in/brodie-frazier-a5a384294/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/brazafraza" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://brodie-frazier.itch.io" class="icon brands fa-itch-io"><span class="label">Itch.io</span></a></li>
+								<li><a href="https://www.youtube.com/@brazafraza" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+								<li><a href="mailto:brodiefrazier@gmail.com" class="fa fa-envelope" aria-hidden="true"><span class="label">Mail</span></a></li>
 							</ul>
 						</li>
 					</ul>
