Sync & Ecco is cannon

--- a/beeranged.html
+++ b/beeranged.html
@@ -166,8 +166,8 @@
                     <br> <h4> Sprite work</h4> It's a lot of fun and an easy way to whip up quick art, especially in a program like Aseprite. I learned that in general, in all new applications I use, I should delve into tutorials and research tools as they can do some incredible things that aren't obvious at first glance. I didn’t use any tutorials for Aseprite, however, I may have found what I was looking for quicker if I did.
                     <br> <h4> Less is more</h4> A simple small thing if done right can be used to make something great, for example, me discovering short drum patterns that can loop to create a dynamic soundtrack (I will be using this again for sure!)
 
-
-                    <br><br><br> Beeranged was a project I recently revisited, I’ve learned that revisiting and reflecting on a project is a great way to gain a different perspective on things and can be incredibly inspiring. I plan on revisiting this game again in late 2024, and again in 2025, reinventing a new title based of Beeranged, having the same core gameplay with new and improved mechanics, visuals and programming. I'm excited to see how the game continues to evolveQ
+                    <h4> Conclusion</h4>
+                    <br><br><br> Beeranged was a project I recently revisited, I’ve learned that revisiting and reflecting on a project is a great way to gain a different perspective on things and can be incredibly inspiring. I plan on revisiting this game again in late 2024, and again in 2025, reinventing a new title based of Beeranged, having the same core gameplay with new and improved mechanics, visuals and programming. I'm excited to see how the game continues to evolves.
 
                     <br /><br>Thanks for reading! If you want to download the game or see more of the game check out the itch page below :)
 
