--- a/nostringsattached.html
+++ b/nostringsattached.html
@@ -308,7 +308,7 @@
                     <a href="https://locstock.dev"> Lochlan McDonald</a>, Lead Programmer<br>
                     <a href="https://sites.google.com/view/josh-zurcas/"> Joshua Zurcas</a>, Programmer<br>
                     <a href="">Gabriel Ubay</a>, Programmer<br>
-                    <a href="https://sketchfab.com/rach.mwa">Rachel Missingham</a>, Lead Artist<br>
+                    <a href="https://rach_mw.artstation.com/">Rachel Missingham</a>, Lead Artist<br>
                     <a href="https://e_salv.artstation.com">Elijah Salvana</a>, Technical Artist<br>
                     <a href="https://www.artstation.com/deakenperera">Deaken Perera</a>, UI Artist<br>
                     <a href="https://www.artstation.com/imgeku">Gianluca La Verde</a>, Artist<br>
