--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					</div>
 				</h1>
 				
-				<p>Hey there! My name is Brodie Frazier, I'm an indie game developer. <br> <br> I'm currently studying game design and production at at AIE in Melbourne, focusing on building my portfolio and expanding my skill set. I have a versatile background with having done work on design, sound, programming and a little bit of art.<br /> I'm working on some exciting projects! Check them out below where I share the development journey for each game and you can find the download links.</p>
+				<p>Hey there! My name is Brodie Frazier, I'm an indie game developer. <br> <br> I've studied and graduated from AIE in Melbourne, completing the Game Design and Production course. I have a versatile background with having done work on design, sound, programming and a little bit of art.<br /><br /> I'm working on some exciting projects! Check them out below where I share the development journey for each game and you can find the download links.</p>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/brodie-frazier-a5a384294/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/brazafraza" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -75,7 +75,7 @@
 			<!-- Project 1 -->
 			<section class="project-section" data-bg-opacity="0.2" style="background-image: url('images/section1bg.png');">
 				<a href="https://basalt-formations.itch.io/sync-and-ecco" class="image" target="_blank">
-					<img src="images/pic04.jpg" alt="Project Image" data-position="center center" />
+					<img src="images/SyncandEcco.png" alt="Project Image" data-position="center center" />
 				</a>
 				<div class="content">
 					<div class="inner">
@@ -84,7 +84,7 @@
 						<p>Custom engine asymmetrical co-op puzzle combat game!</p>
 						<ul class="actions">
 							<li><a href="syncandecco.html" class="button" target="_blank">Development page</a></li>
-							<li><a href="https://basalt-formations.itch.io/sync-and-ecco" class="button" target="_blank">Coming soon!</a></li>
+							<li><a href="https://basalt-formations.itch.io/sync-and-ecco" class="button" target="_blank">DOWNLOAD!</a></li>
 						</ul>
 					</div>
 				</div>
@@ -103,27 +103,6 @@
 						<ul class="actions">
 							<li><a href="nostringsattached.html" class="button" target="_blank">devlopment page</a></li>
 							<li><a href="https://locstock.itch.io/no-strings-attached" class="button" target="_blank">Download!</a></li>
-						</ul>
-					</div>
-				</div>
-			</section>
-
-
-
-			<!-- Project 3 -->
-			<section class="project-section" data-bg-opacity="0.2" style="background-image: url('images/section3bg.png');">
-				<a href="https://brodie-frazier.itch.io/beeranged" class="image" target="_blank">
-					<img src="images/pic05.jpg" alt="Project Image" data-position="center center" />
-				</a>
-				<div class="content">
-					<div class="inner">
-						<h2>Beeranged</h2>
-						<h3>Solo project</h3>
-						<p>Defend yourself from an endless swarm of bees and defeat the queen!</p>
-
-						<ul class="actions">
-							<li><a href="beeranged.html" class="button" target="_blank">devlopment page</a></li>
-							<li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">DOWNLOAD!</a></li>
 						</ul>
 					</div>
 				</div>
@@ -163,6 +142,29 @@
 					</div>
 				</div>
 			</section>
+
+
+
+			<!-- Project 3 -->
+			<section class="project-section" data-bg-opacity="0.2" style="background-image: url('images/section3bg.png');">
+				<a href="https://brodie-frazier.itch.io/beeranged" class="image" target="_blank">
+					<img src="images/pic05.jpg" alt="Project Image" data-position="center center" />
+				</a>
+				<div class="content">
+					<div class="inner">
+						<h2>Beeranged</h2>
+						<h3>Solo project</h3>
+						<p>Defend yourself from an endless swarm of bees and defeat the queen!</p>
+
+						<ul class="actions">
+							<li><a href="beeranged.html" class="button" target="_blank">devlopment page</a></li>
+							<li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">DOWNLOAD!</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+
+
 
 		</section>
 
