Final Hour Updated

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					</div>
 				</h1>
 				
-				<p>Hey there! My name is Brodie Frazier, I'm an indie game developer. <br> <br> I've studied and graduated from AIE in Melbourne, completing the Game Design and Production course. I have a versatile background with having done work on design, sound, programming and a little bit of art.<br /><br /> I'm working on some exciting projects! Check them out below where I share the development journey for each game and you can find the download links.</p>
+				<p>Hey there! My name is Brodie Frazier, I'm an indie game developer. <br> <br> I've studied and graduated from AIE in Melbourne, completing the Game Design and Production course. I have a versatile background with having done work on design, sound, programming, producing and a little bit of art.<br /><br /> I'm working on some exciting projects! Check them out below where I share the development journey for each game and you can find the download links.</p>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/brodie-frazier-a5a384294/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/brazafraza" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
