--- a/finalhour.html
+++ b/finalhour.html
@@ -43,19 +43,18 @@
 
 						Speak to your friends, find the truth.<br><br>
 
-						<div class="screenshot-gallery">
-							<button class="scroll-button left" onclick="scrollGallery(-1)"></button>
-							<div class="screenshot-container">
-								<div class="screenshot-row">
-
-									<img src="images/FinalHour/Game1.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
-									<img src="images/FinalHour/Game2.png" alt="Draft" data-position="center center" style="width:600px;height:325px;"><br />
-									<img src="images/FinalHour/Game3.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
-									<img src="images/FinalHour/Game4.png" alt="Draft" data-position="center center" style="width:600px;height:325px;"><br />
-								</div>
-							</div>
-							<button class="scroll-button right" onclick="scrollGallery(1)"></button>
-						</div>
+																  <div class="screenshot-gallery" data-gallery="3">
+																	  <button class="scroll-button left" onclick="scrollGallery(-1, 3)"></button>
+																	  <div class="screenshot-container">
+																		  <div class="screenshot-row">
+																			  <img src="images/FinalHour/Game1.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
+																			  <img src="images/FinalHour/Game2.png" alt="Draft" data-position="center center" style="width:600px;height:325px;"><br />
+																			  <img src="images/FinalHour/Game3.png" alt="Draft" data-position="center center" style="width:600px;height:325px;">
+																			  <img src="images/FinalHour/Game4.png" alt="Draft" data-position="center center" style="width:600px;height:325px;"><br />
+																		  </div>
+																	  </div>
+																	  <button class="scroll-button right" onclick="scrollGallery(1, 3)"></button>
+																  </div>
 
 
 						<br />
@@ -88,13 +87,14 @@
 
 								<h3> Early Desgin & Challenges</h3>
 								Inspired by spaceships and architecture in Star Wars, Cowboy Bebop and Rick and Morty. I aimed for a retro sci-fi aesthetic, while not being too overly futuristic.I really liked the semi-claustrophobic mechanical feel in some of their designs, especially in star wars ships, These are were some of my reference images used for my sketches. <br><br>
-								<img src="images/FinalHour/I1.png" alt="1" data-position="center center" style="width:984px;height:396px;"><br>
+								<img src="images/FinalHour/I1.png" alt="Draft" class="responsive-image">
 								Ship Inspirtaions<br>
-								<img src="images/FinalHour/I2.png" alt="2" data-position="center center" style="width:984px;height:396px;"><br>
+								<img src="images/FinalHour/I2.png" alt="Draft" class="responsive-image">
 								Inside Inspirations<br><br>
 
 								These are my early paper sketches.<br>
-								<img src="images/FinalHour/Sketches.png" alt="1" data-position="center center" style="width:984px;height:396px;"><br>
+
+								<img src="images/FinalHour/Sketches.png" alt="Draft" class="responsive-image">
 
 								<br>As this was a 1 week jam, I didn't have a lot of time for iteration so I tried to stick with one of my initial concepts. <br>
 
@@ -111,39 +111,56 @@
 
 
 								<br>After even more reviews from the narrative designer and team, I refined the digital draft and started blocking out the playable areas in engine.<br>
-								<img src="images/FinalHour/FD1.png" alt="Draft" data-position="center center" style="width: 720px; height: 720px;">
-								<img src="images/FinalHour/FD2.png" alt="Draft" data-position="center center" style="width: 720px; height: 720px; ">
+								<img src="images/FinalHour/FD3.png" alt="Draft" class="responsive-image">
+
 								<br>I left it up to the narrative designer to place the items for each fetch quest and position for each NPC. <br>
 
 								<br>To save time and create a more lived-in feel, I used barricades and furniture to block off non-playable areas, making the ship feel bigger without overextending the level. I made the grey box by putting the level design above into engine on a large cube and building the area on top of it. This design was slightly altered after some more feedback from the team. I got back into the engine and made the final version with primitives, it looked like this: <br>
 
-								<img src="images/FinalHour/D2.png" alt="Draft" data-position="center center" style="width:599px;height:575px;">
+								<img src="images/FinalHour/D2.png" alt="Draft" class="responsive-image">
 								<br>As you can see, there are some slight differences to the 2D design, but that’s expected when translating a 2D image to 3D. One recurring issue was trying to align walls perfectly without creating awkward collisions or gaps. I solved this by using cylinders to cover the edges where walls met. This trick worked beautifully and added a nice polish to the level.<br>
-								<img src="images/FinalHour/Hallway.png" alt="Draft" data-position="center center" style="width:1137px;height:606px;">
-								<img src="images/FinalHour/D3.png" alt="Draft" data-position="center center" style="width:799px;height:850px;">
-								<br>This is what the level looked like from above with the shader. You never see this angle but I thought it was fun to look at!<br><br>
+								<img src="images/FinalHour/Hallway.png" alt="Draft" class="responsive-image">
 
+								<br>This is what the level looked like from above with the shader. You never see this angle but I thought it was fun to look at!<br>
+								<img src="images/FinalHour/D3.png" alt="Draft" class="responsive-image">
 
 
 								I was extremely pleased with the level of design I created in such a short time. <br><br>
 
 								Here are some other grey box screenshots of the project, they aren’t from the gameplay pov but it was interesting to see the detail change between with and without the shader.<br><br>
 
-								<img src="images/FinalHour/SS1.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-								<img src="images/FinalHour/SS2.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-								<img src="images/FinalHour/SS3.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-								<img src="images/FinalHour/SS4.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-								<img src="images/FinalHour/SS5.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
 
-								<img src="images/FinalHour/SSS1.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-								<img src="images/FinalHour/SSS2.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-								<img src="images/FinalHour/SSS3.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-								<img src="images/FinalHour/SSS4.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-								<img src="images/FinalHour/SSS5.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-								<img src="images/FinalHour/SSS6.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+								<div class="screenshot-gallery" data-gallery="1">
+									<button class="scroll-button left" onclick="scrollGallery(-1, 1)"></button>
+									<div class="screenshot-container">
+										<div class="screenshot-row">
+											<img src="images/FinalHour/SS1.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+											<img src="images/FinalHour/SS2.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+											<img src="images/FinalHour/SS3.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+											<img src="images/FinalHour/SS4.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+											<img src="images/FinalHour/SS5.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+										</div>
+									</div>
+									<button class="scroll-button right" onclick="scrollGallery(1, 1)"></button>
+								</div>
+
+								<div class="screenshot-gallery" data-gallery="2">
+									<button class="scroll-button left" onclick="scrollGallery(-1, 2)"></button>
+									<div class="screenshot-container">
+										<div class="screenshot-row">
+											<img src="images/FinalHour/SSS1.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+											<img src="images/FinalHour/SSS2.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+											<img src="images/FinalHour/SSS3.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+											<img src="images/FinalHour/SSS4.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+											<img src="images/FinalHour/SSS5.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+											<img src="images/FinalHour/SSS6.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+										</div>
+									</div>
+									<button class="scroll-button right" onclick="scrollGallery(1, 2)"></button>
+								</div>
 
 
-								<br>Screenshots of the level with the final shader, it looks so cool! <br><br>
+								<br>
 
 
 								I spent four days on the level design, leaving three days for audio work and a final day for polishing both.<br><br>
@@ -163,7 +180,7 @@
 
 								Creating the audio was a mix of recording sounds myself with random household objects and using the SoundSnap library (licensed), finding sounds and editing them using Audacity. I didn’t have too much experience using Audacity plugins until this project as learning it felt a bit tedious to me, but there's no better time than in the middle of a game jam! After doing some research into games with lower bitrate sounds and how to make these sounds, I found an Audacity plugin called a Ring Modulator. Using this plugin, I was able to lower the bitrate of audio which gave them the crunchy distorted sound you can hear in the game.<br><br>
 
-								Here are some examples of the audio below!<br>
+								Here are some examples of the audio below!<br><br>
 								<audio controls>
 
 
@@ -311,19 +328,42 @@
 
 		<!-- Screenshots -->
 		<script>
-			let scrollPosition = 0;
+            let scrollPositions = {};
 
-			function scrollGallery(direction) {
-				const container = document.querySelector('.screenshot-row');
-				const scrollAmount = 300;
-				const maxScroll = container.scrollWidth - container.offsetWidth;
+            function scrollGallery(direction, galleryId) {
+                const gallery = document.querySelector(`.screenshot-gallery[data-gallery="${galleryId}"]`);
+                const container = gallery.querySelector('.screenshot-container');
+                const row = gallery.querySelector('.screenshot-row');
+                const scrollAmount = 300;
 
-				scrollPosition += direction * scrollAmount;
-				if (scrollPosition < 0) scrollPosition = 0;
-				if (scrollPosition > maxScroll) scrollPosition = maxScroll;
+                if (!row || !container) {
+                    console.error(`Gallery with ID ${galleryId} does not have the required elements.`);
+                    return;
+                }
 
-				container.style.transform = `translateX(-${scrollPosition}px)`;
-			}
+                const maxScroll = row.scrollWidth - container.offsetWidth;
+
+                // Initialize the scroll position for the gallery if not already set
+                if (!scrollPositions[galleryId]) {
+                    scrollPositions[galleryId] = 0;
+                }
+
+                // Adjust the scroll position
+                scrollPositions[galleryId] += direction * scrollAmount;
+
+                // Prevent scrolling beyond bounds
+                if (scrollPositions[galleryId] < 0) {
+                    scrollPositions[galleryId] = 0;
+                }
+                if (scrollPositions[galleryId] > maxScroll) {
+                    scrollPositions[galleryId] = maxScroll;
+                }
+
+                // Apply the scroll effect
+                row.style.transform = `translateX(-${scrollPositions[galleryId]}px)`;
+            }
+
+
 		</script>
 
 
