Fitted images in final hour correctly

--- a/beeranged.html
+++ b/beeranged.html
@@ -5,13 +5,14 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Beeranged</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
+<head>
+	<link rel="icon" type="image/png" href="/images/brazafrazabeeranged.png">
+	<title>Beeranged</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 	<body class="is-preload">
 
 		<!-- Header -->
@@ -268,9 +269,9 @@
 			document.addEventListener('DOMContentLoaded', function () {
 				const mainImage = document.getElementById('mainImage');
 				const imageOptions = [
-					'/images/brazafrazagear5.png',
-					'/images/brazafrazaflamingo.png',
-					'/images/brazafrazachigo.png'
+					'/images/brazafrazabeeranged.png'
+					
+					
 
 				];
 
