--- a/finalhour.html
+++ b/finalhour.html
@@ -5,13 +5,14 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Final Hour</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
+<head>
+	<link rel="icon" type="image/png" href="/images/brazafrazafinalhour.png">
+	<title>Final Hour</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 	<body class="is-preload">
 
 		<!-- Header -->
@@ -100,11 +101,11 @@
 
 
 								<br>I wanted a ship design that felt almost circular to give easy paths leading to the main area connecting all the rooms. This design met all my needs the most and was my favourite, so I jumped straight into engine and started building it and testing the scale.<br>
-								<img src="images/FinalHour/S1.jpg" alt="1" data-position="center center" style="width:1057px;height:815px;"><br>
+																																																																									  <img src="images/FinalHour/S1.jpg" alt="Draft" class="half-image">
 								<br>When I started building the level in Unity, I quickly realized that curved walls were difficult to work with using Unity’s primitives. Awkward geometry and alignment issues made the design non-viable, so I touched it up and made a digital draft in Photopea, covering the curved walls with straight ones in front of them. This was my first challenge in understanding how 2D designs translate into 3D space and a simple solution to unforeseen issue.<br><br>
 
 								This was the first rough digital draft created for the level design:
-								<img src="images/FinalHour/D1.png" alt="Draft" data-position="center center" style="width:951px;height:864px;">
+																																																																																																																									   <img src="images/FinalHour/D1.png" alt="Draft" class="half-image">
 
 								<br>After more communication with the narrative designer, they were happy with the design so I re-made it in higher quality, and got feedback from the rest of the team.<br>
 
@@ -119,13 +120,13 @@
 
 								<img src="images/FinalHour/D2.png" alt="Draft" class="responsive-image">
 								<br>As you can see, there are some slight differences to the 2D design, but that’s expected when translating a 2D image to 3D. One recurring issue was trying to align walls perfectly without creating awkward collisions or gaps. I solved this by using cylinders to cover the edges where walls met. This trick worked beautifully and added a nice polish to the level.<br>
-								<img src="images/FinalHour/Hallway.png" alt="Draft" class="responsive-image">
+								<img src="images/FinalHour/Hallway.png" alt="Draft" class="half-image">
 
 								<br>This is what the level looked like from above with the shader. You never see this angle but I thought it was fun to look at!<br>
 								<img src="images/FinalHour/D3.png" alt="Draft" class="responsive-image">
 
 
-								I was extremely pleased with the level of design I created in such a short time. <br><br>
+								<br>I was extremely pleased with the level of design I created in such a short time. <br><br>
 
 								Here are some other grey box screenshots of the project, they aren’t from the gameplay pov but it was interesting to see the detail change between with and without the shader.<br><br>
 
@@ -308,9 +309,7 @@
 			document.addEventListener('DOMContentLoaded', function () {
 				const mainImage = document.getElementById('mainImage');
 				const imageOptions = [
-					'/images/brazafrazagear5.png',
-					'/images/brazafrazaflamingo.png',
-					'/images/brazafrazachigo.png'
+                    'brazafrazafinalhour'
 
 				];
 
